[#IDM-172] make sure to set templateUri to the value stored in the session when no template is specified